Animate cards to new position when starting new game

--- a/src/assets/scss/card.scss
+++ b/src/assets/scss/card.scss
@@ -3,6 +3,7 @@
   justify-content: stretch;
   position: relative;
   padding-top: 100%;
+  transition: transform 0.5s ease-in-out;
   & > * {
     align-items: center;
     backface-visibility: hidden;
