--- a/src/assets/scss/endgame.scss
+++ b/src/assets/scss/endgame.scss
@@ -5,15 +5,18 @@
   border-radius: 4px;
   color: var(--main-color);
   display: flex;
+  font-size: 0.75rem;
   grid-row: 1;
   grid-column: 1/3;
   justify-content: center;
   justify-self: center;
-  padding: 40px 80px;
+  padding: 20px 40px;
   transform: translateY(-50vh);
   transition: transform 0.25s ease-in-out;
+  text-align: center;
   z-index: 5;
   @include breakpoint($desktop-width) {
+    padding: 40px 80px;
     grid-column: 2/4;
   }
   &--visible {
